# serializer version: 1
# name: test_attach_task_transform
  list([
    dict({
      'id': 1,
      'task': dict({
        'complete': False,
        'context': dict({
        }),
        'count': 0,
        'created_at': datetime,
        'error': None,
        'file_size': None,
        'id': 3,
        'progress': 0,
        'step': 'refresh_reference_releases',
        'type': 'refresh_reference_releases',
      }),
    }),
    dict({
      'id': 2,
      'task': dict({
        'complete': False,
        'context': dict({
        }),
        'count': 0,
        'created_at': datetime,
        'error': None,
        'file_size': None,
        'id': 4,
        'progress': 0,
        'step': 'clone_reference',
        'type': 'clone_reference',
      }),
    }),
    dict({
      'id': 3,
      'task': None,
    }),
    dict({
      'id': 4,
      'task': None,
    }),
  ])
# ---
# name: test_attach_task_transform_single
  list([
    dict({
      'id': 1,
      'task': dict({
        'complete': False,
        'context': dict({
        }),
        'count': 0,
        'created_at': datetime,
        'error': None,
        'file_size': None,
        'id': 2,
        'progress': 0,
        'step': 'clean_references',
        'type': 'clean_references',
      }),
    }),
    dict({
      'id': 2,
      'task': None,
    }),
  ])
# ---
